<resources>
    <string name="app_name">Converter Lab</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="bank">Bank</string>
    <string name="exchange_office">Exchange office</string>
    <string name="tel_label">"Tel.: "</string>
    <string name="address_label">"Address: "</string>
    <string name="unknown">"unknown"</string>
    <string name="error_map">Error loading map</string>
    <string name="title_activity_map">Map</string>
    <string name="location">Location</string>
    <string name="country">Ukraine</string>
    <string name="error_search_place">Error searching place</string>
    <string name="connection_error">Connection error</string>
    <string name="update_message">Currency exchange</string>
    <string name="update_successful">Update successful</string>
    <string name="update_failed">Update failed</string>
    <string name="updating_data">Updating data…</string>
    <string name="notification_ticker">Updating currencies data</string>
    <string name="open_link">Website</string>
    <string name="open_phone">Call</string>
    <string name="open_map">Map</string>
    <string name="open_detail">open detail</string>
    <string name="phone">phone</string>
    <string name="region">region</string>
    <string name="region_label">Region:</string>
    <string name="city">city</string>
    <string name="city_label">City:</string>
    <string name="address">address</string>
    <string name="type">type</string>
    <string name="type_label">Type:</string>
    <string name="link">link</string>
    <string name="link_label">Website</string>
    <string name="trader_name">Trader Name</string>
    <string name="currency_name">Currency name</string>
    <string name="ask">Ask /</string>
    <string name="bid">Bid</string>
    <string name="currency">Currency</string>
    <string name="quote_value">00.0000</string>
    <string name="upside">upside</string>
    <string name="marker">marker</string>
    <string name="share_finished">Information shared</string>
    <string name="info_image">info image</string>
    <string name="slash"> / </string>
</resources>
