<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_base_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/card_offer_FO"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius_fo"
        card_view:cardElevation="@dimen/card_elevation_fo"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/button_base_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTraderName_FO"
                android:text="@string/trader_name"
                style="@style/trader_name_info_card_style"/>
            <TextView
                android:text="@string/link_label"
                style="@style/website_info_card_style"/>
            <TextView
                android:id="@+id/tvLink_FO"
                android:text="@string/link"
                style="@style/link_info_card_style"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:text="@string/type_label"
                        style="@style/table_row_label_info_card_style"/>
                    <TextView
                        android:id="@+id/tvType_FO"
                        android:text="@string/type"
                        style="@style/table_row_value_trader_info_card_style"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/address_label"
                        style="@style/table_row_label_info_card_style"/>
                    <TextView
                        android:id="@+id/tvAddress_FO"
                        android:text="@string/address"
                        style="@style/table_row_value_trader_info_card_style"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/city_label"
                        style="@style/table_row_label_info_card_style"/>
                    <TextView
                        android:id="@+id/tvCity_FO"
                        android:text="@string/city"
                        style="@style/table_row_value_trader_info_card_style"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/region_label"
                        style="@style/table_row_label_info_card_style"/>
                    <TextView
                        android:id="@+id/tvRegion_FO"
                        android:text="@string/region"
                        style="@style/table_row_value_trader_info_card_style"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:text="@string/tel_label"
                        style="@style/table_row_label_info_card_style"/>
                    <TextView
                        android:id="@+id/tvPhone_FO"
                        android:text="@string/phone"
                        style="@style/table_row_value_trader_info_card_style"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>