<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_base_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/card_offer_title_FO"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/card_corner_radius_fo"
        card_view:cardElevation="@dimen/card_elevation_fo"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="false">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_base_margin">
            <TextView
                android:id="@+id/tvCurrencyLabel_FO"
                android:text="@string/currency_name"
                style="@style/currency_name_offer_title_card_style"/>
            <TextView
                android:id="@+id/tvAskLabel_FO"
                android:text="@string/ask"
                tools:ignore="RelativeOverlap"
                style="@style/ask_tv_offer_title_card_style"/>
            <TextView
                android:id="@+id/tvBidLabel_FO"
                android:text="@string/bid"
                style="@style/bid_tv_offer_title_card_style"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>