<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:fab="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/primary_light"
             android:paddingBottom="@dimen/button_base_margin">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout_FO"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView_FO"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linLayout_content_FO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_base_margin"
                android:orientation="vertical">
            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/rootFl_FO"
        style="@style/transparency_framelayout_style">
    </FrameLayout>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/fab_menu_FO"
        style="@style/fab_menu_style"
        fab:fab_addButtonColorNormal="@color/accent"
        fab:fab_addButtonColorPressed="@color/red"
        fab:fab_addButtonPlusIconColor="@color/primary_light"
        fab:fab_icon="@drawable/ic_menu"
        fab:fab_labelStyle="@style/menu_labels_style">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_map_FO"
            style="@style/fab_btn_style"
            android:src="@drawable/ic_map"
            fab:fab_colorNormal="@color/primary_light"
            fab:fab_colorPressed="@color/primary_dark"
            fab:fab_title="@string/open_map"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_link_FO"
            android:src="@drawable/ic_link"
            fab:fab_colorNormal="@color/primary_light"
            fab:fab_colorPressed="@color/primary_dark"
            fab:fab_title="@string/open_link"
            style="@style/fab_btn_style"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_phone_FO"
            android:src="@drawable/ic_phone"
            fab:fab_colorNormal="@color/primary_light"
            fab:fab_colorPressed="@color/primary_dark"
            fab:fab_title="@string/open_phone"
            style="@style/fab_btn_style"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</FrameLayout>